# testing-environment

./: README.md  docker-compose.yml  dockerfile
.circleci/: config.yml
work/calcdemo/: pyproject.toml
work/calcdemo/calcdemo/: calc.py
work/calcdemo/tests/: test_calcdemo.py
